[gd_scene load_steps=11 format=3 uid="uid://cnjx0gp7mon3y"]

[ext_resource type="Script" path="res://Visual assets/Background/star_background.gd" id="1_ixte7"]
[ext_resource type="Shader" path="res://Visual assets/Background/Texture_scroller_stars1.gdshader" id="2_dcivs"]
[ext_resource type="Texture2D" uid="uid://cjerph823xhqe" path="res://Visual assets/Textures/stars_hq1.png" id="3_axrqo"]
[ext_resource type="Shader" path="res://Visual assets/Background/Texture_scroller_stars2.gdshader" id="4_hf7df"]
[ext_resource type="Texture2D" uid="uid://cgvswunywht3r" path="res://Visual assets/Textures/stars_hq2.png" id="5_ca05v"]
[ext_resource type="Shader" path="res://Visual assets/Background/Texture_scroller_stars3.gdshader" id="6_ehatp"]
[ext_resource type="Texture2D" uid="uid://dxjh8l542g1ca" path="res://Visual assets/Textures/stars_hq3.png" id="7_ybqio"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfxvf"]
shader = ExtResource("2_dcivs")
shader_parameter/scroll_speed = 0.03
shader_parameter/angle_degrees = 0.0
shader_parameter/repeat_x = 1.0
shader_parameter/repeat_y = 1.0
shader_parameter/row_offset = 0.0
shader_parameter/texture_to_scroll = ExtResource("3_axrqo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6rpmd"]
shader = ExtResource("4_hf7df")
shader_parameter/scroll_speed = 0.02
shader_parameter/angle_degrees = 0.0
shader_parameter/repeat_x = 1.0
shader_parameter/repeat_y = 1.0
shader_parameter/row_offset = 1.0
shader_parameter/texture_to_scroll = ExtResource("5_ca05v")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8byfh"]
shader = ExtResource("6_ehatp")
shader_parameter/scroll_speed = 0.01
shader_parameter/angle_degrees = 0.0
shader_parameter/repeat_x = 1.0
shader_parameter/repeat_y = 1.0
shader_parameter/row_offset = 0.0
shader_parameter/texture_to_scroll = ExtResource("7_ybqio")

[node name="Star_background" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -54.0
offset_right = 144.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixte7")
Background_color = Color(1, 0.996078, 0.968627, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.996078, 0.968627, 1)

[node name="Stars_1" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.666667)
material = SubResource("ShaderMaterial_gfxvf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -71.2667
offset_top = -58.1333
offset_right = -71.2666
offset_bottom = -58.1333
grow_horizontal = 2
grow_vertical = 2

[node name="Stars_2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6rpmd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.5909
offset_top = -39.6364
offset_right = -48.5908
offset_bottom = -39.6362
grow_horizontal = 2
grow_vertical = 2

[node name="Stars_3" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)
material = SubResource("ShaderMaterial_8byfh")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -36.8621
offset_top = -30.069
offset_right = -36.8621
offset_bottom = -30.069
grow_horizontal = 2
grow_vertical = 2
